--- a/Proj/BarChartMauiLiveCharts/BarChartMauiLiveCharts/BarChartMauiLiveCharts.csproj
+++ b/Proj/BarChartMauiLiveCharts/BarChartMauiLiveCharts/BarChartMauiLiveCharts.csproj
@@ -114,6 +114,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <PackageReference Include="CommunityToolkit.Maui" Version="2.0.0" />
+	  <PackageReference Include="CommunityToolkit.Maui.Markup" Version="1.2.1" />
 	  <PackageReference Include="CommunityToolkit.Mvvm" Version="8.1.0-preview2" />
 	  <PackageReference Include="LiveChartsCore.SkiaSharpView.Maui" Version="2.0.0-beta.700" />
 	</ItemGroup>
