--- a/Proj/MauiDictionaryMvvmExample01/MauiMvvmTest/MauiDictionaryMvvmExample01.csproj
+++ b/Proj/MauiDictionaryMvvmExample01/MauiMvvmTest/MauiDictionaryMvvmExample01.csproj
@@ -5,7 +5,7 @@
 		<!-- Uncomment to also build the tizen app. You will need to install tizen by following this: https://github.com/Samsung/Tizen.NET -->
 		<!-- <TargetFrameworks>$(TargetFrameworks);net6.0-tizen</TargetFrameworks> -->
 		<OutputType>Exe</OutputType>
-		<RootNamespace>MauiMvvmTest</RootNamespace>
+		<RootNamespace>MauiDictionaryMvvmExample01</RootNamespace>
 		<UseMaui>true</UseMaui>
 		<SingleProject>true</SingleProject>
 		<ImplicitUsings>enable</ImplicitUsings>
@@ -43,7 +43,7 @@
 
 	<PropertyGroup>
 	  <TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('windows'))">$(TargetFrameworks);net6.0-windows10.0.22621.0</TargetFrameworks>
-	  <AssemblyName>MauiMvvmTest</AssemblyName>
+	  <AssemblyName>MauiDictionaryMvvmExample01</AssemblyName>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -69,19 +69,13 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Compile Update="Pages\Page2.xaml.cs">
-	    <DependentUpon>Page2.xaml</DependentUpon>
-	  </Compile>
-	  <Compile Update="Pages\Page1.xaml.cs">
-	    <DependentUpon>Page1.xaml</DependentUpon>
+	  <Compile Update="Pages\SettingsPage.xaml.cs">
+	    <DependentUpon>SettingsPage.xaml</DependentUpon>
 	  </Compile>
 	</ItemGroup>
 
 	<ItemGroup>
-	  <MauiXaml Update="Pages\Page2.xaml">
-	    <Generator>MSBuild:Compile</Generator>
-	  </MauiXaml>
-	  <MauiXaml Update="Pages\Page1.xaml">
+	  <MauiXaml Update="Pages\SettingsPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	</ItemGroup>
