--- a/Proj/.gitignore
+++ b/Proj/.gitignore
@@ -34,6 +34,8 @@
 !/MauiCollectionViewIssue/
 !/MauiCollectionViewIssue/**
 
+!/MauiCollectionViewSelectedColor/
+!/MauiCollectionViewSelectedColor/**
 
 
 
